# cleanCppCMakeArchitectureGuiExample

./: CMakeLists.txt
.github/workflows/: cmake_build.yml
dependencies/: CMakeLists.txt
dependencies/catch/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
